--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d3828e31",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "feens\n"
+      "rosha\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "id": "5d980c35",
    "metadata": {},
    "outputs": [
@@ -78,17 +78,150 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "slate\n",
+      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
+      "hello\n",
+      "['gray', 'gray', 'green', 'yellow', 'yellow']\n",
       "word\n",
-      "DECRY\n",
-      "decry\n",
+      "COLZA\n",
+      "colza\n",
       "['green', 'green', 'green', 'green', 'green']\n",
-      "DECRY\n"
+      "COLZA\n",
+      "y\n",
+      "[5.36, 'other']\n",
+      "[5.26, 'thein']\n",
+      "[5.26, 'could']\n",
+      "[5.24, 'those']\n",
+      "[5.21, 'these']\n",
+      "[5.13, 'couth']\n",
+      "[5.12, 'lithe']\n",
+      "[5.1, 'theme']\n",
+      "[5.08, 'kithe']\n",
+      "[5.07, 'thelf']\n",
+      "\n",
+      "slate\n",
+      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
+      "hello\n",
+      "['gray', 'gray', 'green', 'yellow', 'yellow']\n",
+      "other\n",
+      "['yellow', 'gray', 'gray', 'gray', 'gray']\n",
+      "thein\n",
+      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "word\n",
+      "THETE\n",
+      "thete\n",
+      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "y\n",
+      "Not a valid word\n",
+      "bloat\n",
+      "['gray', 'yellow', 'yellow', 'yellow', 'gray']\n",
+      "lasts\n",
+      "['yellow', 'yellow', 'gray', 'gray', 'gray']\n",
+      "plays\n",
+      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
+      "malap\n",
+      "Not a valid word\n",
+      "chalk\n",
+      "['green', 'gray', 'yellow', 'yellow', 'gray']\n",
+      "calls\n",
+      "['green', 'yellow', 'green', 'yellow', 'gray']\n",
+      "collar\n",
+      "Not a valid word\n",
+      "colar\n",
+      "Not a valid word\n",
+      "molar\n",
+      "['gray', 'green', 'green', 'yellow', 'gray']\n",
+      "color\n",
+      "['green', 'green', 'green', 'yellow', 'gray']\n",
+      "word\n",
+      "THETE\n",
+      "colts\n",
+      "['green', 'green', 'green', 'gray', 'gray']\n",
+      "white\n",
+      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "brawl\n",
+      "['gray', 'gray', 'yellow', 'gray', 'yellow']\n",
+      "colad\n",
+      "Not a valid word\n",
+      "colan\n",
+      "Not a valid word\n",
+      "colon\n",
+      "['green', 'green', 'green', 'yellow', 'gray']\n",
+      "colla\n",
+      "Not a valid word\n",
+      "colas\n",
+      "['green', 'green', 'green', 'yellow', 'gray']\n",
+      "colra\n",
+      "Not a valid word\n",
+      "colba\n",
+      "Not a valid word\n",
+      "colma\n",
+      "Not a valid word\n",
+      "colla\n",
+      "Not a valid word\n",
+      "colqa\n",
+      "Not a valid word\n",
+      "colwa\n",
+      "Not a valid word\n",
+      "colea\n",
+      "Not a valid word\n",
+      "colra\n",
+      "Not a valid word\n",
+      "colta\n",
+      "Not a valid word\n",
+      "colya\n",
+      "Not a valid word\n",
+      "colua\n",
+      "Not a valid word\n",
+      "colia\n",
+      "Not a valid word\n",
+      "coloa\n",
+      "Not a valid word\n",
+      "colpa\n",
+      "Not a valid word\n",
+      "colaa\n",
+      "Not a valid word\n",
+      "colsa\n",
+      "Not a valid word\n",
+      "colda\n",
+      "Not a valid word\n",
+      "colfa\n",
+      "Not a valid word\n",
+      "colga\n",
+      "Not a valid word\n",
+      "colha\n",
+      "Not a valid word\n",
+      "colja\n",
+      "Not a valid word\n",
+      "colka\n",
+      "Not a valid word\n",
+      "colla\n",
+      "Not a valid word\n",
+      "colza\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "THETE\n",
+      "colxa\n",
+      "[12.87, 'thete']\n",
+      "[12.57, 'hetes']\n",
+      "[11.26, 'teths']\n",
+      "[11.26, 'teeth']\n",
+      "[11.14, 'tetra']\n",
+      "[11.14, 'motet']\n",
+      "[11.06, 'suete']\n",
+      "[11.06, 'ketes']\n",
+      "[11.05, 'seter']\n",
+      "[11.03, 'metel']\n",
+      "\n",
+      "TEETH\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "import sklearn as sk\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "file = open(\"words.txt\", \"r\")\n",
     "\n",
@@ -97,6 +230,56 @@
     "\n",
     "for line in file:\n",
     "    words.append(line.strip())\n",
+    "\n",
+    "file.close()\n",
+    "\n",
+    "file = open(\"Training.txt\", \"r\")\n",
+    "training = []\n",
+    "\n",
+    "for line in file:\n",
+    "    data = line.split()\n",
+    "    training.append([data[0].lower(), float(data[1])])\n",
+    "    \n",
+    "x = [data[0] for data in training]\n",
+    "y = [data[1] for data in training]\n",
+    "\n",
+    "file.close()\n",
+    "\n",
+    "def choose_new_word(x, y):\n",
+    "    # Initialize the CountVectorizer\n",
+    "    vectorizer = CountVectorizer(analyzer='char', ngram_range=(2, 2), binary=True)\n",
+    "\n",
+    "    # Fit the vectorizer to the training data and transform it\n",
+    "    X = vectorizer.fit_transform(x)\n",
+    "\n",
+    "    # Initialize the Random Forest Regressor\n",
+    "    rf_model = RandomForestRegressor(n_estimators=200, random_state=42)\n",
+    "\n",
+    "    # Train the Random Forest regression model on the training data\n",
+    "    rf_model.fit(X, y)\n",
+    "\n",
+    "    # Assuming 'words' is the list of test words\n",
+    "    # Transform the test data using the fitted vectorizer\n",
+    "    X_test = vectorizer.transform(words)\n",
+    "\n",
+    "    # Predict on the test data\n",
+    "    predictions = rf_model.predict(X_test)\n",
+    "\n",
+    "    hard_words = []\n",
+    "\n",
+    "    # Print the predictions with the associated words\n",
+    "    for word, prediction in zip(words, predictions):\n",
+    "        hard_words.append([round(prediction, 2), word])\n",
+    "\n",
+    "    hard_words.sort()\n",
+    "    hard_words.reverse()\n",
+    "    for i in hard_words[:10]:\n",
+    "        print(i)\n",
+    "    print()\n",
+    "    choices = hard_words[:20]\n",
+    "    new_word = choices[random.randint(0, 20)][1]\n",
+    "    return new_word.upper()\n",
+    "    \n",
     "    \n",
     "# Creates a word list of used words\n",
     "word = words[random.randint(0, len(words))].upper()\n",
@@ -133,86 +316,135 @@
     "            if placements[i] != \"green\":\n",
     "                guessed_letters[guess[i]] += 1\n",
     "    return placements, correct_guesses\n",
-    "        \n",
-    "correct = [0, 0, 0, 0, 0]\n",
-    "guessed = [\"gray\", \"gray\", \"gray\", \"gray\", \"gray\"]\n",
     "\n",
-    "while guessed != [\"green\", \"green\", \"green\", \"green\", \"green\"]:\n",
-    "    guess = input().strip().lower()\n",
-    "    if guess == \"word\":\n",
-    "        print(word)\n",
-    "    elif guess not in used_words and guess not in words:\n",
-    "        print(\"Not a valid word\")\n",
+    "def play_game():\n",
+    "    count_guesses = 0\n",
+    "    correct = [0, 0, 0, 0, 0]\n",
+    "    guessed = [\"gray\", \"gray\", \"gray\", \"gray\", \"gray\"]\n",
+    "\n",
+    "    while guessed != [\"green\", \"green\", \"green\", \"green\", \"green\"]:\n",
+    "        guess = input().strip().lower()\n",
+    "        if guess == \"word\":\n",
+    "            print(word)\n",
+    "        elif guess not in used_words and guess not in words:\n",
+    "            print(\"Not a valid word\")\n",
+    "        else:\n",
+    "            guessed, correct = process_guess(guess.upper(), correct)\n",
+    "            count_guesses += 1\n",
+    "            print(guessed)\n",
+    "\n",
+    "    x.append(word.lower())\n",
+    "    y.append(count_guesses)\n",
+    "    print(word)\n",
+    "\n",
+    "play_game()\n",
+    "\n",
+    "play = True\n",
+    "\n",
+    "while play == True:\n",
+    "    keep_playing = input()\n",
+    "    if keep_playing != \"y\":\n",
+    "        play = False\n",
+    "        break\n",
     "    else:\n",
-    "        guessed, correct = process_guess(guess.upper(), correct_guesses)\n",
-    "        print(guessed)\n",
-    "\n",
-    "print(word)"
+    "        word = choose_new_word(x, y)\n",
+    "        play_game()\n",
+    "print(choose_new_word(x, y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "711b6cae",
+   "execution_count": 8,
+   "id": "40b55124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"Training.txt\", \"r\")\n",
+    "training = []\n",
+    "\n",
+    "for line in file:\n",
+    "    data = line.split()\n",
+    "    training.append([data[0].lower(), float(data[1])])\n",
+    "    \n",
+    "x = [data[0] for data in training]\n",
+    "y = [data[1] for data in training]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "99aed3bf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 3.12 GiB for an array with shape (12984, 32238) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[78], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Assuming 'words' is your list of words and 'vectorizer' is already fitted as before\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mvectorizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwords\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtoarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Transform the words into features\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Train-test split for demonstration; in practice, you might just predict on new/unseen data\u001b[39;00m\n\u001b[0;32m      9\u001b[0m X_train, X_test, y_train, y_test, words_train, words_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y, words, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\scipy\\sparse\\_compressed.py:1051\u001b[0m, in \u001b[0;36m_cs_matrix.toarray\u001b[1;34m(self, order, out)\u001b[0m\n\u001b[0;32m   1049\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m out \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m order \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1050\u001b[0m     order \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_swap(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcf\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m-> 1051\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_process_toarray_args\u001b[49m\u001b[43m(\u001b[49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1052\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (out\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mc_contiguous \u001b[38;5;129;01mor\u001b[39;00m out\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mf_contiguous):\n\u001b[0;32m   1053\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOutput array must be C or F contiguous\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\scipy\\sparse\\_base.py:1298\u001b[0m, in \u001b[0;36mspmatrix._process_toarray_args\u001b[1;34m(self, order, out)\u001b[0m\n\u001b[0;32m   1296\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m out\n\u001b[0;32m   1297\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1298\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 3.12 GiB for an array with shape (12984, 32238) and data type float64"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.37, 'couth']\n",
+      "[5.35, 'thein']\n",
+      "[5.34, 'other']\n",
+      "[5.29, 'coths']\n",
+      "[5.25, 'could']\n",
+      "[5.24, 'those']\n",
+      "[5.23, 'lithe']\n",
+      "[5.19, 'these']\n",
+      "[5.15, 'theme']\n",
+      "[5.15, 'cough']\n",
+      "[5.14, 'thelf']\n",
+      "[5.14, 'count']\n",
+      "[5.12, 'thebe']\n",
+      "[5.12, 'kithe']\n",
+      "[5.11, 'theic']\n",
+      "[5.11, 'ninth']\n",
+      "[5.1, 'wythe']\n",
+      "[5.1, 'tythe']\n",
+      "[5.1, 'thewy']\n",
+      "[5.1, 'thews']\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# Assuming 'words' is your list of words and 'vectorizer' is already fitted as before\n",
-    "X = vectorizer.transform(words).toarray()  # Transform the words into features\n",
+    "# Assuming `x` is your list of words and `y` is the list of average number of guesses\n",
     "\n",
-    "# Train-test split for demonstration; in practice, you might just predict on new/unseen data\n",
-    "X_train, X_test, y_train, y_test, words_train, words_test = train_test_split(X, y, words, test_size=0.2, random_state=42)\n",
+    "# Initialize the CountVectorizer\n",
+    "vectorizer = CountVectorizer(analyzer='char', ngram_range=(2, 2), binary=True)\n",
     "\n",
-    "# Train the model\n",
-    "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "model.fit(X_train, y_train)\n",
+    "# Fit the vectorizer to the training data and transform it\n",
+    "X = vectorizer.fit_transform(x)\n",
     "\n",
-    "# Predict probabilities\n",
-    "predicted_probabilities = model.predict_proba(X_test)\n",
+    "# Initialize the Random Forest Regressor\n",
+    "rf_model = RandomForestRegressor(n_estimators=200, random_state=42)\n",
     "\n",
-    "# Check if predicted_probabilities has two columns; if not, handle accordingly\n",
-    "if predicted_probabilities.shape[1] == 1:\n",
-    "    # Assuming the only column corresponds to the probability of class 1 being present\n",
-    "    # And thus the probability of class 0 is 1 - probability of class 1\n",
-    "    hardness_scores = 1 - predicted_probabilities[:, 0]\n",
-    "else:\n",
-    "    # Normal case where both probabilities are present\n",
-    "    hardness_scores = predicted_probabilities[:, 1]\n",
+    "# Train the Random Forest regression model on the training data\n",
+    "rf_model.fit(X, y)\n",
     "\n",
-    "# Continue with pairing words with their hardness scores and sorting\n",
-    "word_difficulty_pairs = list(zip(words_test, hardness_scores))\n",
-    "sorted_word_difficulty_pairs = sorted(word_difficulty_pairs, key=lambda x: x[1], reverse=True)\n",
+    "# Assuming 'words' is the list of test words\n",
+    "# Transform the test data using the fitted vectorizer\n",
+    "X_test = vectorizer.transform(words)\n",
     "\n",
-    "# Extract and print sorted words and scores\n",
-    "sorted_words = [pair[0] for pair in sorted_word_difficulty_pairs]\n",
-    "sorted_scores = [pair[1] for pair in sorted_word_difficulty_pairs]\n",
+    "# Predict on the test data\n",
+    "predictions = rf_model.predict(X_test)\n",
     "\n",
-    "for word, score in zip(sorted_words, sorted_scores):\n",
-    "    print(f\"Word: {word}, Hardness Score: {score}\")\n"
+    "hard_words = []\n",
+    "\n",
+    "# Print the predictions with the associated words\n",
+    "for word, prediction in zip(words, predictions):\n",
+    "    hard_words.append([round(prediction, 2), word])\n",
+    "\n",
+    "hard_words.sort()\n",
+    "hard_words.reverse()\n",
+    "for i in hard_words[:20]:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b55124",
+   "id": "c9a26432",
    "metadata": {},
    "outputs": [],
    "source": []
