--- a/Test.ipynb
+++ b/Test.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "5d980c35",
    "metadata": {},
    "outputs": [
@@ -79,140 +79,153 @@
      "output_type": "stream",
      "text": [
       "slate\n",
-      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
-      "hello\n",
-      "['gray', 'gray', 'green', 'yellow', 'yellow']\n",
+      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "place\n",
+      "['yellow', 'gray', 'gray', 'gray', 'gray']\n",
       "word\n",
-      "COLZA\n",
-      "colza\n",
+      "GRIPY\n",
+      "grips\n",
+      "['green', 'green', 'green', 'green', 'gray']\n",
+      "gripy\n",
       "['green', 'green', 'green', 'green', 'green']\n",
-      "COLZA\n",
-      "y\n",
-      "[5.36, 'other']\n",
-      "[5.26, 'thein']\n",
+      "GRIPY\n",
+      "Keep playing: y\n",
+      "[5.42, 'other']\n",
+      "[5.4, 'couth']\n",
+      "[5.39, 'thein']\n",
+      "[5.37, 'coths']\n",
+      "[5.28, 'those']\n",
+      "[5.27, 'these']\n",
       "[5.26, 'could']\n",
-      "[5.24, 'those']\n",
-      "[5.21, 'these']\n",
-      "[5.13, 'couth']\n",
-      "[5.12, 'lithe']\n",
-      "[5.1, 'theme']\n",
-      "[5.08, 'kithe']\n",
-      "[5.07, 'thelf']\n",
+      "[5.25, 'lithe']\n",
+      "[5.23, 'theme']\n",
+      "[5.21, 'thelf']\n",
+      "\n",
+      "thief\n",
+      "['green', 'green', 'gray', 'yellow', 'gray']\n",
+      "word\n",
+      "THEME\n",
+      "theme\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "THEME\n",
+      "Keep playing: y\n",
+      "[5.36, 'coths']\n",
+      "[5.32, 'cosey']\n",
+      "[5.32, 'coset']\n",
+      "[5.32, 'coses']\n",
+      "[5.32, 'cosed']\n",
+      "[5.32, 'cosec']\n",
+      "[5.28, 'cough']\n",
+      "[5.26, 'mocos']\n",
+      "[5.23, 'could']\n",
+      "[5.22, 'rosco']\n",
       "\n",
       "slate\n",
-      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
-      "hello\n",
-      "['gray', 'gray', 'green', 'yellow', 'yellow']\n",
-      "other\n",
       "['yellow', 'gray', 'gray', 'gray', 'gray']\n",
-      "thein\n",
-      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "brick\n",
+      "['gray', 'gray', 'gray', 'yellow', 'gray']\n",
+      "coths\n",
+      "['yellow', 'yellow', 'gray', 'gray', 'green']\n",
       "word\n",
-      "THETE\n",
-      "thete\n",
-      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
-      "y\n",
-      "Not a valid word\n",
-      "bloat\n",
-      "['gray', 'yellow', 'yellow', 'yellow', 'gray']\n",
-      "lasts\n",
-      "['yellow', 'yellow', 'gray', 'gray', 'gray']\n",
-      "plays\n",
-      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
-      "malap\n",
-      "Not a valid word\n",
-      "chalk\n",
-      "['green', 'gray', 'yellow', 'yellow', 'gray']\n",
-      "calls\n",
-      "['green', 'yellow', 'green', 'yellow', 'gray']\n",
-      "collar\n",
-      "Not a valid word\n",
-      "colar\n",
-      "Not a valid word\n",
-      "molar\n",
-      "['gray', 'green', 'green', 'yellow', 'gray']\n",
-      "color\n",
-      "['green', 'green', 'green', 'yellow', 'gray']\n",
-      "word\n",
-      "THETE\n",
-      "colts\n",
-      "['green', 'green', 'green', 'gray', 'gray']\n",
-      "white\n",
-      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
-      "brawl\n",
-      "['gray', 'gray', 'yellow', 'gray', 'yellow']\n",
-      "colad\n",
-      "Not a valid word\n",
-      "colan\n",
-      "Not a valid word\n",
-      "colon\n",
-      "['green', 'green', 'green', 'yellow', 'gray']\n",
-      "colla\n",
-      "Not a valid word\n",
-      "colas\n",
-      "['green', 'green', 'green', 'yellow', 'gray']\n",
-      "colra\n",
-      "Not a valid word\n",
-      "colba\n",
-      "Not a valid word\n",
-      "colma\n",
-      "Not a valid word\n",
-      "colla\n",
-      "Not a valid word\n",
-      "colqa\n",
-      "Not a valid word\n",
-      "colwa\n",
-      "Not a valid word\n",
-      "colea\n",
-      "Not a valid word\n",
-      "colra\n",
-      "Not a valid word\n",
-      "colta\n",
-      "Not a valid word\n",
-      "colya\n",
-      "Not a valid word\n",
-      "colua\n",
-      "Not a valid word\n",
-      "colia\n",
-      "Not a valid word\n",
-      "coloa\n",
-      "Not a valid word\n",
-      "colpa\n",
-      "Not a valid word\n",
-      "colaa\n",
-      "Not a valid word\n",
-      "colsa\n",
-      "Not a valid word\n",
-      "colda\n",
-      "Not a valid word\n",
-      "colfa\n",
-      "Not a valid word\n",
-      "colga\n",
-      "Not a valid word\n",
-      "colha\n",
-      "Not a valid word\n",
-      "colja\n",
-      "Not a valid word\n",
-      "colka\n",
-      "Not a valid word\n",
-      "colla\n",
-      "Not a valid word\n",
-      "colza\n",
+      "JUCOS\n",
+      "jukes\n",
+      "['green', 'green', 'gray', 'gray', 'green']\n",
+      "jucos\n",
       "['green', 'green', 'green', 'green', 'green']\n",
-      "THETE\n",
-      "colxa\n",
-      "[12.87, 'thete']\n",
-      "[12.57, 'hetes']\n",
-      "[11.26, 'teths']\n",
-      "[11.26, 'teeth']\n",
-      "[11.14, 'tetra']\n",
-      "[11.14, 'motet']\n",
-      "[11.06, 'suete']\n",
-      "[11.06, 'ketes']\n",
-      "[11.05, 'seter']\n",
-      "[11.03, 'metel']\n",
+      "JUCOS\n",
+      "Keep playing: y\n",
+      "[5.55, 'coths']\n",
+      "[5.41, 'couth']\n",
+      "[5.39, 'cough']\n",
+      "[5.36, 'cobot']\n",
+      "[5.35, 'count']\n",
+      "[5.34, 'scoug']\n",
+      "[5.34, 'scots']\n",
+      "[5.34, 'scote']\n",
+      "[5.34, 'scoot']\n",
+      "[5.34, 'ocote']\n",
       "\n",
-      "TEETH\n"
+      "slate\n",
+      "['gray', 'gray', 'gray', 'yellow', 'gray']\n",
+      "plows\n",
+      "['gray', 'gray', 'yellow', 'gray', 'gray']\n",
+      "shows\n",
+      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
+      "spout\n",
+      "['gray', 'gray', 'yellow', 'gray', 'yellow']\n",
+      "spits\n",
+      "['gray', 'gray', 'gray', 'yellow', 'gray']\n",
+      "word\n",
+      "COTCH\n",
+      "cotch\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "COTCH\n",
+      "Keep playing: y\n",
+      "[5.79, 'cotch']\n",
+      "[5.75, 'coths']\n",
+      "[5.68, 'scots']\n",
+      "[5.68, 'scote']\n",
+      "[5.68, 'scoot']\n",
+      "[5.68, 'picot']\n",
+      "[5.68, 'ocote']\n",
+      "[5.68, 'escot']\n",
+      "[5.68, 'dicot']\n",
+      "[5.68, 'cotts']\n",
+      "\n",
+      "cotch\n",
+      "['yellow', 'yellow', 'yellow', 'yellow', 'gray']\n",
+      "word\n",
+      "ASCOT\n",
+      "ascot\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "ASCOT\n",
+      "Keep playing: y\n",
+      "[5.41, 'cotch']\n",
+      "[5.2, 'potch']\n",
+      "[5.2, 'could']\n",
+      "[5.19, 'those']\n",
+      "[5.14, 'other']\n",
+      "[5.11, 'hotch']\n",
+      "[5.1, 'kotch']\n",
+      "[5.09, 'ethos']\n",
+      "[5.08, 'couch']\n",
+      "[5.08, 'cohos']\n",
+      "\n",
+      "word\n",
+      "COTCH\n",
+      "cotch\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "COTCH\n",
+      "Keep playing: y\n",
+      "[5.23, 'those']\n",
+      "[5.19, 'could']\n",
+      "[5.14, 'ethos']\n",
+      "[5.11, 'other']\n",
+      "[4.98, 'couth']\n",
+      "[4.98, 'cough']\n",
+      "[4.96, 'lipos']\n",
+      "[4.95, 'posey']\n",
+      "[4.95, 'oslin']\n",
+      "[4.94, 'posse']\n",
+      "\n",
+      "word\n",
+      "GHOST\n",
+      "ghost\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "GHOST\n",
+      "Keep playing: q\n",
+      "[5.19, 'could']\n",
+      "[5.12, 'other']\n",
+      "[4.97, 'couth']\n",
+      "[4.94, 'point']\n",
+      "[4.93, 'those']\n",
+      "[4.91, 'ninth']\n",
+      "[4.82, 'count']\n",
+      "[4.78, 'coude']\n",
+      "[4.77, 'linty']\n",
+      "[4.77, 'lints']\n",
+      "\n",
+      "COUTH\n"
      ]
     }
    ],
@@ -282,11 +295,8 @@
     "    \n",
     "    \n",
     "# Creates a word list of used words\n",
-    "word = words[random.randint(0, len(words))].upper()\n",
+    "random_word = words[random.randint(0, len(words))].upper()\n",
     "used_words.append(words.pop(words.index(word.lower())))\n",
-    "\n",
-    "# Creates a dictionary of the indexes and the character at that index for the word the user is trying to guess\n",
-    "word_letters = {index: letter for index, letter in enumerate(word)}\n",
     "\n",
     "letters = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
     "\n",
@@ -294,7 +304,7 @@
     "guessed_letters = {letter: 0 for letter in letters}\n",
     "\n",
     "# Returns an array of strings specifying the colors assigned to each box in given order\n",
-    "def process_guess(guess, correct_guesses):\n",
+    "def process_guess(guess, correct_guesses, word_letters):\n",
     "    # Creates another dictionary that is similar to word_letters, but for the guessed word\n",
     "    guess_letters = {index: letter for index, letter in enumerate(guess)}\n",
     "    placements = []\n",
@@ -317,7 +327,10 @@
     "                guessed_letters[guess[i]] += 1\n",
     "    return placements, correct_guesses\n",
     "\n",
-    "def play_game():\n",
+    "def play_game(word):\n",
+    "    # Creates a dictionary of the indexes and the character at that index for the word the user is trying to guess\n",
+    "    word_letters = {index: letter for index, letter in enumerate(word)}\n",
+    "    \n",
     "    count_guesses = 0\n",
     "    correct = [0, 0, 0, 0, 0]\n",
     "    guessed = [\"gray\", \"gray\", \"gray\", \"gray\", \"gray\"]\n",
@@ -329,7 +342,7 @@
     "        elif guess not in used_words and guess not in words:\n",
     "            print(\"Not a valid word\")\n",
     "        else:\n",
-    "            guessed, correct = process_guess(guess.upper(), correct)\n",
+    "            guessed, correct = process_guess(guess.upper(), correct, word_letters)\n",
     "            count_guesses += 1\n",
     "            print(guessed)\n",
     "\n",
@@ -337,18 +350,18 @@
     "    y.append(count_guesses)\n",
     "    print(word)\n",
     "\n",
-    "play_game()\n",
-    "\n",
     "play = True\n",
     "\n",
+    "play_game(random_word)\n",
     "while play == True:\n",
+    "    print(\"Keep playing: \", end = \"\")\n",
     "    keep_playing = input()\n",
     "    if keep_playing != \"y\":\n",
     "        play = False\n",
     "        break\n",
     "    else:\n",
-    "        word = choose_new_word(x, y)\n",
-    "        play_game()\n",
+    "        random_word = choose_new_word(x, y)\n",
+    "        play_game(random_word)\n",
     "print(choose_new_word(x, y))"
    ]
   },
