--- a/Test.ipynb
+++ b/Test.ipynb
@@ -456,8 +456,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f9e2bb3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3, 4, 5]\n",
+    "total = 0\n",
+    "while x:\n",
+    "    total = total + 1\n",
+    "    if len(x) > 3:\n",
+    "        x.pop()  # removes item from end of `x`\n",
+    "    else:\n",
+    "        break\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8e8fd6c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (487864912.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    return True\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"race car\"\n",
+    "\n",
+    "x = x.split()\n",
+    "x = \"\".join(x)\n",
+    "reverse = x[::-1].lower()\n",
+    "if x.lower() == reverse:\n",
+    "    return True\n",
+    "else:\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f9f9e8d",
    "metadata": {},
    "outputs": [],
    "source": []
