--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d3828e31",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ponty\n"
+      "cukes\n"
      ]
     }
    ],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "5f9f9e8d",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "68bf24ec",
    "metadata": {},
    "outputs": [],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "90ddd5c9",
    "metadata": {},
    "outputs": [
@@ -546,52 +546,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "word\n",
-      "MAZEL\n",
       "slate\n",
-      "['gray', 'yellow', 'yellow', 'gray', 'yellow']\n",
-      "mazes\n",
-      "['green', 'green', 'green', 'green', 'gray']\n",
-      "mazel\n",
-      "['green', 'green', 'green', 'green', 'green']\n",
-      "MAZEL\n",
-      "Keep playing: y\n",
-      "[[4.16, 'GYBED'], [4.08, 'NYAFF'], [3.8, 'GUBBA'], [3.8, 'BUBBA'], [3.75, 'SUBBY'], [3.72, 'BUBBE'], [3.68, 'HUBBA'], [3.67, 'SWABS'], [3.66, 'ARABA'], [3.58, 'STABS'], [3.54, 'SIMBA'], [3.54, 'SAMBA'], [3.5, 'SHUBA'], [3.5, 'SCUBA'], [3.5, 'SAUBA'], [3.5, 'LYCEE'], [3.47, 'OYAMA'], [3.46, 'SWAGE'], [3.46, 'SCOBE'], [3.46, 'LYCEA']]\n",
-      "gross\n",
-      "['green', 'gray', 'gray', 'gray', 'gray']\n",
-      "brine\n",
-      "['yellow', 'gray', 'gray', 'gray', 'yellow']\n",
-      "slate\n",
-      "['gray', 'gray', 'gray', 'gray', 'yellow']\n",
-      "globe\n",
-      "['green', 'gray', 'gray', 'yellow', 'yellow']\n",
-      "gybes\n",
-      "['green', 'green', 'green', 'green', 'gray']\n",
-      "gybed\n",
-      "['green', 'green', 'green', 'green', 'green']\n",
-      "GYBED\n",
-      "Keep playing: y\n",
-      "[[7.14, 'IZARD'], [6.89, 'GYBES'], [6.65, 'GUAVA'], [6.65, 'GUARD'], [6.65, 'GUANA'], [6.57, 'GRATA'], [6.57, 'GRAND'], [6.57, 'GRANA'], [6.57, 'GRAMA'], [6.57, 'FRAUD'], [6.57, 'FRANC'], [6.55, 'GYANS'], [6.53, 'IZARS'], [6.52, 'GYALS'], [6.49, 'GIBED'], [6.46, 'IMBED'], [6.45, 'HOAED'], [6.42, 'GRAFF'], [6.33, 'CYBER'], [6.31, 'HEARD']]\n",
-      "farts\n",
-      "['gray', 'yellow', 'yellow', 'gray', 'gray']\n",
-      "frats\n",
-      "['gray', 'yellow', 'green', 'gray', 'gray']\n",
-      "gybed\n",
-      "GYBED\n",
-      "Not a valid word\n",
-      "izard\n",
-      "['green', 'green', 'green', 'green', 'green']\n",
-      "IZARD\n",
-      "Keep playing: y\n",
-      "[[7.19, 'GYBES'], [7.04, 'GUARD'], [7.03, 'FRAUD'], [7.02, 'GUAVA'], [7.01, 'GRATA'], [6.96, 'GUANA'], [6.96, 'GRAND'], [6.95, 'GRANA'], [6.95, 'GRAMA'], [6.95, 'FRANC'], [6.88, 'GRAFF'], [6.86, 'GIBED'], [6.82, 'GRAZE'], [6.82, 'GRAVE'], [6.82, 'GRATE'], [6.82, 'FYKED'], [6.82, 'FRATE'], [6.8, 'GYVED'], [6.8, 'GYRED'], [6.78, 'HYPED']]\n",
+      "['gray', 'green', 'gray', 'gray', 'yellow']\n",
       "word\n",
-      "GYBES\n",
-      "gybes\n",
-      "['green', 'green', 'green', 'green', 'green']\n",
-      "GYBES\n",
-      "Keep playing: n\n",
-      "{'SYBBE': 10, 'ZYMIC': 1, 'VODDY': 1, 'TUBAL': 3, 'CYCAD': 3, 'KYACK': 1, 'REBBE': 2, 'SYRAH': 1, 'TUBAE': 1, 'SYBOE': 2, 'SYCEE': 4, 'SEIZE': 3, 'MAZEL': 3, 'GYBED': 10, 'IZARD': 3, 'GYBES': 1}\n",
-      "{'A': 12, 'B': 7, 'C': 5, 'D': 4, 'E': 11, 'F': 1, 'G': 3, 'H': 3, 'I': 5, 'J': 0, 'K': 2, 'L': 6, 'M': 3, 'N': 2, 'O': 5, 'P': 4, 'Q': 0, 'R': 5, 'S': 11, 'T': 8, 'U': 3, 'V': 3, 'W': 0, 'X': 0, 'Y': 9, 'Z': 4}\n"
+      "PLECK\n",
+      "pleck\n",
+      "['green', 'green', 'green', 'green', 'green']\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m play \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m      3\u001b[0m random_word \u001b[38;5;241m=\u001b[39m words[random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(words))]\u001b[38;5;241m.\u001b[39mupper()\n\u001b[1;32m----> 4\u001b[0m \u001b[43mplay_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom_word\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m play \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKeep playing: \u001b[39m\u001b[38;5;124m\"\u001b[39m, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[7], line 64\u001b[0m, in \u001b[0;36mplay_game\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m     61\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m guess\u001b[38;5;241m.\u001b[39mupper():\n\u001b[0;32m     62\u001b[0m             guessed_letters[i] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241m.\u001b[39mappend(word\u001b[38;5;241m.\u001b[39mlower())\n\u001b[0;32m     65\u001b[0m y\u001b[38;5;241m.\u001b[39mappend(count_guesses)\n\u001b[0;32m     66\u001b[0m \u001b[38;5;28mprint\u001b[39m(word)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
      ]
     }
    ],
@@ -669,8 +641,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c739c095",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slate\n",
+      "['gray', 'gray', 'gray', 'gray', 'yellow']\n",
+      "word\n",
+      "BENCH\n",
+      "there\n",
+      "['gray', 'yellow', 'yellow', 'gray', 'yellow']\n",
+      "heres\n",
+      "['yellow', 'green', 'gray', 'yellow', 'gray']\n",
+      "hears\n",
+      "['yellow', 'green', 'gray', 'gray', 'gray']\n",
+      "hello\n",
+      "['yellow', 'green', 'gray', 'gray', 'gray']\n",
+      "bench\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "BENCH\n",
+      "Keep playing: y\n",
+      "[[10.0, 'ZYMIC'], [10.0, 'ZYMES'], [10.0, 'ZYGON'], [10.0, 'ZYGAL'], [10.0, 'ZUZIM'], [10.0, 'ZURFS'], [10.0, 'ZUPPA'], [10.0, 'ZUPAS'], [10.0, 'ZUPAN'], [10.0, 'ZULUS'], [10.0, 'ZOWIE'], [10.0, 'ZOWEE'], [10.0, 'ZOUKS'], [10.0, 'ZORSE'], [10.0, 'ZORRO'], [10.0, 'ZORIS'], [10.0, 'ZORIL'], [10.0, 'ZOPPO'], [10.0, 'ZOPPA'], [10.0, 'ZOOTY']]\n",
+      "zymic\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "ZYMIC\n",
+      "Keep playing: y\n",
+      "[[8.02, 'NOYES'], [8.02, 'NOYAU'], [8.02, 'NOXES'], [8.02, 'NOXAS'], [8.02, 'NOXAL'], [8.02, 'NOWDS'], [8.02, 'NOWAY'], [8.02, 'NOVEL'], [8.02, 'NOVAS'], [8.02, 'NOTES'], [8.02, 'NOTER'], [8.02, 'NOTCH'], [8.02, 'NOTAM'], [8.02, 'NOTAL'], [8.02, 'NOSEY'], [8.02, 'NOSES'], [8.02, 'NOSER'], [8.02, 'NOPAL'], [8.02, 'NOOBS'], [8.02, 'NONET']]\n",
+      "noyes\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "NOYES\n",
+      "Keep playing: y\n",
+      "[[7.48, 'HENCH'], [7.48, 'HARAM'], [7.48, 'HANDI'], [7.48, 'HANCH'], [7.48, 'GINCH'], [7.48, 'GERAH'], [7.48, 'GENAL'], [7.48, 'GARAM'], [7.48, 'GANCH'], [7.48, 'FINCH'], [7.48, 'FINAL'], [7.48, 'FERAL'], [7.48, 'FASCI'], [7.48, 'FARCI'], [7.48, 'FANAL'], [7.48, 'DISCI'], [7.48, 'DIRAM'], [7.48, 'DIOCH'], [7.48, 'DHOBI'], [7.48, 'DEOCH']]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 114\u001b[0m\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    113\u001b[0m         random_word \u001b[38;5;241m=\u001b[39m choose_new_word(used_words, words)\n\u001b[1;32m--> 114\u001b[0m         \u001b[43mplay_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom_word\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupper\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;28mprint\u001b[39m(used_words)\n\u001b[0;32m    116\u001b[0m \u001b[38;5;28mprint\u001b[39m(total_guessed)\n",
+      "Cell \u001b[1;32mIn[14], line 52\u001b[0m, in \u001b[0;36mplay_game\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m     49\u001b[0m guessed \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m guessed \u001b[38;5;241m!=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m count_guesses \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[1;32m---> 52\u001b[0m     guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mstrip()\u001b[38;5;241m.\u001b[39mupper()\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m guess \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWORD\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     54\u001b[0m         \u001b[38;5;28mprint\u001b[39m(word)\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[1;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1176\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1177\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1178\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1179\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1180\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[0;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import sklearn as sk\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "file = open(\"words.txt\", \"r\")\n",
+    "\n",
+    "words = []\n",
+    "used_words = {}\n",
+    "\n",
+    "for line in file:\n",
+    "    words.append(line.strip().upper())\n",
+    "file.close()\n",
+    "\n",
+    "letters = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
+    "\n",
+    "# Creates a dictionary of all the guessed letters\n",
+    "total_guessed = {letter: 0 for letter in letters}\n",
+    "\n",
+    "# Returns an array of strings specifying the colors assigned to each box in given order\n",
+    "def process_guess(guess, correct_guesses, word_letters):\n",
+    "    # Creates another dictionary that is similar to word_letters, but for the guessed word\n",
+    "    guess_letters = {index: letter for index, letter in enumerate(guess)}\n",
+    "    placements = []\n",
+    "    # Assigns colors to the letters\n",
+    "    for i in range(len(guess_letters)):\n",
+    "        if guess_letters[i] in word_letters.values():\n",
+    "            if guess_letters[i] == word_letters[i]:\n",
+    "                placements.append(\"green\")\n",
+    "            else:\n",
+    "                placements.append(\"yellow\")\n",
+    "        else:\n",
+    "            placements.append(\"gray\")\n",
+    "    for i in range(len(guess)):\n",
+    "        if correct_guesses[i] == 0:\n",
+    "            if placements[i] == \"green\":\n",
+    "                correct_guesses[i] = 1\n",
+    "    return placements, correct_guesses\n",
+    "\n",
+    "def play_game(word):\n",
+    "    guessed_letters = {letter: False for letter in letters}\n",
+    "    # Creates a dictionary of the indexes and the character at that index for the word the user is trying to guess\n",
+    "    word_letters = {index: letter for index, letter in enumerate(word)}\n",
+    "    \n",
+    "    count_guesses = 0\n",
+    "    correct = [0, 0, 0, 0, 0]\n",
+    "    guessed = [\"gray\", \"gray\", \"gray\", \"gray\", \"gray\"]\n",
+    "\n",
+    "    while guessed != [\"green\", \"green\", \"green\", \"green\", \"green\"] and count_guesses < 6:\n",
+    "        guess = input().strip().upper()\n",
+    "        if guess == \"WORD\":\n",
+    "            print(word)\n",
+    "        elif guess not in words:\n",
+    "            print(guess)\n",
+    "            print(\"Not a valid word\")\n",
+    "        else:\n",
+    "            guessed, correct = process_guess(guess.upper(), correct, word_letters)\n",
+    "            count_guesses += 1\n",
+    "            print(guessed)\n",
+    "            for i in guess.upper():\n",
+    "                guessed_letters[i] = True\n",
+    "\n",
+    "    print(word)\n",
+    "    if count_guesses >= 6:\n",
+    "        count_guesses = 10\n",
+    "    used_words[word] = count_guesses\n",
+    "    words.remove(word)\n",
+    "    for i in guessed_letters:\n",
+    "        if guessed_letters[i] == True:\n",
+    "            total_guessed[i] += 1\n",
+    "            \n",
+    "def word_to_numbers(word):\n",
+    "    word = word.lower()\n",
+    "    return [ord(char) - ord('a') + 1 for char in word.lower()]\n",
+    "\n",
+    "def choose_new_word(dic, test):\n",
+    "    # Prepare training data\n",
+    "    X_train = np.array([word_to_numbers(key) for key in dic.keys()])\n",
+    "    y_train = np.array(list(dic.values()))\n",
+    "    \n",
+    "    # Prepare testing data\n",
+    "    X_test = np.array([word_to_numbers(word) for word in test])\n",
+    "\n",
+    "    # Initialize and train the model\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Make predictions and evaluate\n",
+    "    predictions = model.predict(X_test)\n",
+    "    \n",
+    "    hard_words = []\n",
+    "\n",
+    "    # Print the predictions with the associated words\n",
+    "    for word, prediction in zip(test, predictions):\n",
+    "        hard_words.append([round(prediction, 2), word])\n",
+    "    hard_words.sort(reverse = True)\n",
+    "    print(hard_words[:20])\n",
+    "    return hard_words[0][1]\n",
+    "\n",
+    "play = True\n",
+    "\n",
+    "random_word = words[random.randint(0, len(words))].upper()\n",
+    "play_game(random_word)\n",
+    "while play == True:\n",
+    "    print(\"Keep playing: \", end = \"\")\n",
+    "    keep_playing = input()\n",
+    "    if keep_playing != \"y\":\n",
+    "        play = False\n",
+    "        break\n",
+    "    else:\n",
+    "        random_word = choose_new_word(used_words, words)\n",
+    "        play_game(random_word.upper())\n",
+    "print(used_words)\n",
+    "print(total_guessed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5d9c67f",
    "metadata": {},
    "outputs": [],
    "source": []
