--- a/Test.ipynb
+++ b/Test.ipynb
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "c739c095",
    "metadata": {},
    "outputs": [
@@ -650,32 +650,16 @@
      "output_type": "stream",
      "text": [
       "slate\n",
-      "['gray', 'gray', 'gray', 'gray', 'yellow']\n",
-      "word\n",
-      "BENCH\n",
+      "['yellow', 'gray', 'gray', 'gray', 'gray']\n",
       "there\n",
-      "['gray', 'yellow', 'yellow', 'gray', 'yellow']\n",
-      "heres\n",
-      "['yellow', 'green', 'gray', 'yellow', 'gray']\n",
-      "hears\n",
-      "['yellow', 'green', 'gray', 'gray', 'gray']\n",
-      "hello\n",
-      "['yellow', 'green', 'gray', 'gray', 'gray']\n",
-      "bench\n",
+      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "word\n",
+      "PONGS\n",
+      "pongs\n",
       "['green', 'green', 'green', 'green', 'green']\n",
-      "BENCH\n",
+      "PONGS\n",
       "Keep playing: y\n",
-      "[[10.0, 'ZYMIC'], [10.0, 'ZYMES'], [10.0, 'ZYGON'], [10.0, 'ZYGAL'], [10.0, 'ZUZIM'], [10.0, 'ZURFS'], [10.0, 'ZUPPA'], [10.0, 'ZUPAS'], [10.0, 'ZUPAN'], [10.0, 'ZULUS'], [10.0, 'ZOWIE'], [10.0, 'ZOWEE'], [10.0, 'ZOUKS'], [10.0, 'ZORSE'], [10.0, 'ZORRO'], [10.0, 'ZORIS'], [10.0, 'ZORIL'], [10.0, 'ZOPPO'], [10.0, 'ZOPPA'], [10.0, 'ZOOTY']]\n",
-      "zymic\n",
-      "['green', 'green', 'green', 'green', 'green']\n",
-      "ZYMIC\n",
-      "Keep playing: y\n",
-      "[[8.02, 'NOYES'], [8.02, 'NOYAU'], [8.02, 'NOXES'], [8.02, 'NOXAS'], [8.02, 'NOXAL'], [8.02, 'NOWDS'], [8.02, 'NOWAY'], [8.02, 'NOVEL'], [8.02, 'NOVAS'], [8.02, 'NOTES'], [8.02, 'NOTER'], [8.02, 'NOTCH'], [8.02, 'NOTAM'], [8.02, 'NOTAL'], [8.02, 'NOSEY'], [8.02, 'NOSES'], [8.02, 'NOSER'], [8.02, 'NOPAL'], [8.02, 'NOOBS'], [8.02, 'NONET']]\n",
-      "noyes\n",
-      "['green', 'green', 'green', 'green', 'green']\n",
-      "NOYES\n",
-      "Keep playing: y\n",
-      "[[7.48, 'HENCH'], [7.48, 'HARAM'], [7.48, 'HANDI'], [7.48, 'HANCH'], [7.48, 'GINCH'], [7.48, 'GERAH'], [7.48, 'GENAL'], [7.48, 'GARAM'], [7.48, 'GANCH'], [7.48, 'FINCH'], [7.48, 'FINAL'], [7.48, 'FERAL'], [7.48, 'FASCI'], [7.48, 'FARCI'], [7.48, 'FANAL'], [7.48, 'DISCI'], [7.48, 'DIRAM'], [7.48, 'DIOCH'], [7.48, 'DHOBI'], [7.48, 'DEOCH']]\n"
+      "[[3.0, 'ZYMIC'], [3.0, 'ZYMES'], [3.0, 'ZYGON'], [3.0, 'ZYGAL'], [3.0, 'ZUZIM'], [3.0, 'ZURFS'], [3.0, 'ZUPPA'], [3.0, 'ZUPAS'], [3.0, 'ZUPAN'], [3.0, 'ZULUS'], [3.0, 'ZOWIE'], [3.0, 'ZOWEE'], [3.0, 'ZOUKS'], [3.0, 'ZORSE'], [3.0, 'ZORRO'], [3.0, 'ZORIS'], [3.0, 'ZORIL'], [3.0, 'ZOPPO'], [3.0, 'ZOPPA'], [3.0, 'ZOOTY']]\n"
      ]
     },
     {
@@ -685,8 +669,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 114\u001b[0m\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    113\u001b[0m         random_word \u001b[38;5;241m=\u001b[39m choose_new_word(used_words, words)\n\u001b[1;32m--> 114\u001b[0m         \u001b[43mplay_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom_word\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupper\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;28mprint\u001b[39m(used_words)\n\u001b[0;32m    116\u001b[0m \u001b[38;5;28mprint\u001b[39m(total_guessed)\n",
-      "Cell \u001b[1;32mIn[14], line 52\u001b[0m, in \u001b[0;36mplay_game\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m     49\u001b[0m guessed \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m guessed \u001b[38;5;241m!=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m count_guesses \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[1;32m---> 52\u001b[0m     guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mstrip()\u001b[38;5;241m.\u001b[39mupper()\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m guess \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWORD\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     54\u001b[0m         \u001b[38;5;28mprint\u001b[39m(word)\n",
+      "Cell \u001b[1;32mIn[17], line 114\u001b[0m\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    113\u001b[0m         random_word \u001b[38;5;241m=\u001b[39m choose_new_word(used_words, words)\n\u001b[1;32m--> 114\u001b[0m         \u001b[43mplay_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom_word\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupper\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;28mprint\u001b[39m(used_words)\n\u001b[0;32m    116\u001b[0m \u001b[38;5;28mprint\u001b[39m(total_guessed)\n",
+      "Cell \u001b[1;32mIn[17], line 52\u001b[0m, in \u001b[0;36mplay_game\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m     49\u001b[0m guessed \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m guessed \u001b[38;5;241m!=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m count_guesses \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[1;32m---> 52\u001b[0m     guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mstrip()\u001b[38;5;241m.\u001b[39mupper()\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m guess \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWORD\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     54\u001b[0m         \u001b[38;5;28mprint\u001b[39m(word)\n",
       "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[1;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1176\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1177\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1178\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1179\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1180\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[0;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
@@ -815,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5d9c67f",
+   "id": "8a9b03f7",
    "metadata": {},
    "outputs": [],
    "source": []
